--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,9 +31,18 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    // RXJava
+    def rxjava_version = '3.0.7'
+    def rxandroid_version = '3.0.0'
+
+    implementation "io.reactivex.rxjava3:rxjava:$rxjava_version"
+    implementation "io.reactivex.rxjava3:rxandroid:$rxandroid_version"
 
     // Retrofit
     def retrofit_version = '2.9.0'
@@ -42,9 +51,35 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava3:$retrofit_version"
 
     //  Hilt
+    def hilt_view_model_version = '1.0.0-alpha02'
+
     implementation "com.google.dagger:hilt-android:$hilt_version"
     annotationProcessor "com.google.dagger:hilt-android-compiler:$hilt_version"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_view_model_version"
+    annotationProcessor "androidx.hilt:hilt-compiler:$hilt_view_model_version"
 
+    // Tests
+    def robolectric_version = '4.3.1'
+
+    testImplementation "org.robolectric:robolectric:$robolectric_version"
+
+    def mockito_version = '3.3.1'
+    testImplementation "org.mockito:mockito-core:$mockito_version"
+
+    def hamcrest_version = '1.3'
+    androidTestImplementation "org.hamcrest:hamcrest-library:$hamcrest_version"
+
+    // Paging
+    def paging_version = "2.1.2"
+
+    implementation "androidx.paging:paging-runtime:$paging_version"
+    implementation "androidx.paging:paging-rxjava2:$paging_version"
+
+    // Picasso
+    def picasso_version = '2.71828'
+
+    implementation "com.squareup.picasso:picasso:$picasso_version"
 }
